--- a/src/app/core/components/layout/layout.component.css
+++ b/src/app/core/components/layout/layout.component.css
@@ -5,6 +5,7 @@
 .app-layout-container {
     height: calc(100vh - 56px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
