--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,24 +1,18 @@
 <div class="app-layout-container">
-  <div *ngIf="isLoading; else showStudents">
-    <app-spinner></app-spinner>
+  <div class="section-container">
+    <section>
+        <div *ngFor="let student of studentList$ | async" class="card mb-4" style="width: 15rem;">
+            <img class="card-img-top" src="../../../assets/profile-default.webp" width="100px" height="150px" alt="Card image cap">
+            <div class="student-data">
+              <strong>{{ student.firstName + ' ' + student.lastName  }}</strong>
+              <span>DNI: {{ student.id }}</span>
+              <span>Fecha de entrega: {{ student.date_of_delivery | date:"dd/MM/yy" }}</span>
+              <span>Final: {{ student.qualification }}</span>
+              <span [ngClass]="student.isApproved ? 'approved' : 'not-approved'">
+                {{ student.isApproved ? '¡Aprobado!' : 'Desaprobado' | uppercase }}
+              </span>
+            </div>
+        </div>
+    </section>
   </div>
-
-  <ng-template #showStudents>
-    <div class="section-container">
-      <section>
-          <div *ngFor="let student of studentsList" class="card mb-4" style="width: 15rem;">
-              <img class="card-img-top" src="../../../assets/profile-default.webp" width="100px" height="150px" alt="Card image cap">
-              <div class="student-data">
-                <strong>{{ student.firstName + ' ' + student.lastName  }}</strong>
-                <span>DNI: {{ student.id }}</span>
-                <span>Fecha de entrega: {{ student.date_of_delivery | date:"dd/MM/yy" }}</span>
-                <span>Final: {{ student.qualification }}</span>
-                <span [ngClass]="student.isApproved ? 'approved' : 'not-approved'">
-                  {{ student.isApproved ? '¡Aprobado!' : 'Desaprobado' | uppercase }}
-                </span>
-              </div>
-          </div>
-      </section>
-    </div>
-  </ng-template>
 </div>
